--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,10 @@
 = Linux Hub for Workroom project
+:gh-name: bigclownlabs/bc-workroom-hub
+:gh-branch: master
+
+ifdef::env-github[]
+image:https://travis-ci.org/{gh-name}.svg?branch={gh-branch}["Build Status", link="https://travis-ci.org/{gh-name}"]
+endif::env-github[]
 
 TODO
 
