Fix postinst scripts to not wait for service to be started
The services (transitively) depends on dev-stm32ACM0.device, so if it's
not connected, they cannot be (re)started. It's a standard (stupid)
practice in Debian to automatically (re)start services after
installation/upgrade using postinst script; fpm generates such script by
default. It seems that when (re)start of a service fails due to unmet
dependencies, it also fail the upgrade process (?):

  Setting up bc-workroom-blynk (1.0.2) ...
  A dependency job for bc-workroom-blynk.service failed. See 'journalctl -xn' for details.
  Setting up bc-workroom-gateway (1.0.2) ...
  A dependency job for bc-workroom-gateway.service failed. See 'journalctl -xn' for details.
  ...
  W: Operation was interrupted before it could finish

fpm allows to use custom post- and pre- scripts, but these are just
included into fpm's postinst template. There's currently no way how to
replace this template or avoid including default systemctl commands.
Fortunately the provided snippets run before the default systemctl
commands, so we call `return 0` to skip them. An ugly hack...

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -5,6 +5,9 @@
 Changed::
 * Change device symlink created by udev from `/dev/bcbridgehid%n` to `/dev/ft260hidraw%n`.
 
+Fixed::
+* Fix postinst scripts to not wait for a service to be started.
+
 == link:{gh-url}/tree/v1.0.3[v1.0.3] (2016-01-11)
 Added::
 * Udev rules for bc-bridge
