--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,9 +1,9 @@
 = Change Log
 :gh-url: https://github.com/bigclownlabs/bc-workroom-hub
 
-== link:{gh-url}/tree/v1.0.4[v1.0.4] (2016-01-12)
+== link:{gh-url}/tree/v1.1.0[v1.1.0] (unreleased)
 Changed::
-* Udev rules for bc-bridge rename symlink to ft260hidraw%n
+* Change device symlink created by udev from `/dev/bcbridgehid%n` to `/dev/ft260hidraw%n`.
 
 == link:{gh-url}/tree/v1.0.3[v1.0.3] (2016-01-11)
 Added::
