--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -5,6 +5,9 @@
 Added::
 * Add option --list to bc-workroom-gateway
 
+Fixed::
+* Fix condition for the default rule in led-strip plugin
+
 == link:{gh-url}/tree/v1.1.0[v1.1.0] (2017-01-12)
 Changed::
 * Change device symlink created by udev from `/dev/bcbridgehid%n` to `/dev/ft260hidraw%n`.
