--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -4,6 +4,7 @@
 == link:{gh-url}/tree/v1.2.0[v1.2.0] (unreleased)
 Added::
 * Add option --list to bc-workroom-gateway
+* Led-strip plugin confirm set data
 
 Fixed::
 * Fix condition for the default rule in led-strip plugin
