--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,9 @@ Added::
 * Led-strip plugin confirm set data
 * Add publish errors in led-strip plugin
 
+Changed::
+* Blynk plugin change brightness range to 0..1023
+
 Fixed::
 * Fix condition for the default rule in led-strip plugin
 
