--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,7 +1,7 @@
 = Change Log
 :gh-url: https://github.com/bigclownlabs/bc-workroom-hub
 
-== link:{gh-url}/tree/v1.2.0[v1.2.0] (unreleased)
+== link:{gh-url}/tree/v1.2.0[v1.2.0] (2017.01.21)
 Added::
 * Add option --list to bc-workroom-gateway
 * Led-strip plugin confirm set data
