--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,6 +1,10 @@
 = Change Log
 :gh-url: https://github.com/bigclownlabs/bc-workroom-hub
 
+== link:{gh-url}/tree/v1.2.1[v1.2.1] (unreleased)
+Fixed::
+* Fix bc-common debian package to create user and group `bigclown`
+
 == link:{gh-url}/tree/v1.2.0[v1.2.0] (2017-01-21)
 Added::
 * Add option `--list` to bc-workroom-gateway
