--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,7 +1,7 @@
 = Change Log
 :gh-url: https://github.com/bigclownlabs/bc-workroom-hub
 
-== link:{gh-url}/tree/v1.2.1[v1.2.1] (unreleased)
+== link:{gh-url}/tree/v1.2.1[v1.2.1] (2017-01-23)
 Fixed::
 * Fix bc-common debian package to create user and group `bigclown`
 
