--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,6 +1,10 @@
 = Change Log
 :gh-url: https://github.com/bigclownlabs/bc-workroom-hub
 
+== link:{gh-url}/tree/v1.2.2[v1.2.2] (unrelesed)
+Fixed::
+* Fix gateway to not log every received line from serial port on INFO level.
+
 == link:{gh-url}/tree/v1.2.1[v1.2.1] (2017-01-23)
 Fixed::
 * Fix bc-common debian package to create user and group `bigclown`
